--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,10 @@
 @import "tailwindcss";
 
+:root {
+  --primary: #ffcc00;
+  --secondary: #1e2939;
+  --tertiary: #f5f5f5;
+}
 
 *,
 *::before,
@@ -18,11 +23,15 @@ body,
   border-radius: 2px;
   width: 30px;
   height: 5px;
-  background-color: #eee;
+  background-color: var(--tertiary);
 }
 
 .generate-btn {
   position: relative;
+}
+
+.generate-btn:hover {
+  color: var(--secondary);
 }
 
 .generate-btn::after {
@@ -32,7 +41,7 @@ body,
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: oklch(0.666 0.179 58.318);
+  background-color: var(--tertiary);
   z-index: -1;
   transform: scaleX(0);
   transform-origin: left;
