--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,6 +19,10 @@ body,
   height: 100%;
 }
 
+.hidden {
+  display: none;
+}
+
 .menu-line {
   border-radius: 2px;
   width: 30px;
@@ -57,6 +61,6 @@ body,
   transition: color 0.75s linear;
 }
 
-.background.monochrome > * {
+.background.monochrome > *:not(.active) {
   color: #555;
 }
