--- a/client/src/index.css
+++ b/client/src/index.css
@@ -95,6 +95,54 @@ body,
   animation: fadeOut 2s forwards ease-out;
 }
 
+.phrase {
+  transform: translate(-50%, -50%);
+}
+
+.option {
+  position: relative;
+  cursor: pointer;
+  padding: 1em 1.5em;
+  color: white;
+  font-size: 2.75em;
+  border: 5px solid white;
+  width: 70%;
+  text-align: center;
+  transition: color 200ms;
+}
+
+.option::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background: white;
+  transform: scaleY(0);
+  transform-origin: bottom;
+  transition: transform 200ms;
+}
+
+.option:hover::after {
+  transform: scaleY(1);
+}
+
+.option:hover {
+  color: var(--secondary);
+}
+
+.option.correct,
+.option.incorrect {
+  color: white;
+}
+
+.question {
+  font-size: 3em;
+  color: white;
+}
+
 @media (max-width: 768px) {
   .phrase {
     font-size: 3rem;
