--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,7 +19,7 @@
 }
 :root {
   --primary: #ffcc00;
-  --secondary: #1e2939;
+  --secondary: #202020;
   --tertiary: #f5f5f5;
 }
 
@@ -84,7 +84,7 @@ body,
 }
 
 .background.monochrome > *:not(.active, .phrase) {
-  color: #555;
+  color: #2f2f2f;
 }
 
 .animate-fade-in {
